<resources>
    <string name="app_name">Inventory</string>
    <string name="editor_activity_title_new_product">Add a Product</string>
    <string name="category_overview">Overview</string>
    <string name="category_supplier">Supplier</string>
    <string name="category_quantity">Quantity</string>
    <string name="category_price">Price</string>
    <string name="hint_product_name">Product Name</string>
    <string name="hint_product_brand">Product Brand</string>
    <string name="hint_product_model">Product Model</string>
    <string name="hint_supplier_phone">Phone</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="hint_product_price">Price</string>
    <string name="supplier_select" translatable="false">Select Supplier</string>
    <string name="supplier_unknown">N/A</string>
    <string name="supplier_1">Vision Star</string>
    <string name="supplier_2">IndiFlashMart</string>
    <string name="supplier_3">Truenet Commerce</string>
    <string name="supplier_4">WS Retailers</string>
    <string name="toast_error_saving_product">Error saving the product.</string>
    <string name="toast_error_saving_product_full">Please fill in all required fields and try again.</string>
    <string name="toast_success_product_saved">Product saved with row id: %1$d</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Products</string>
    <string name="cursor_message">The table contains $1$d books.</string>
</resources>
